--- a/FiscaliZi.Colinfo/Assets/FlyPedido.xaml
+++ b/FiscaliZi.Colinfo/Assets/FlyPedido.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <TextBlock Text="{Binding Cliente.Razao}" Width="300" Height="300"></TextBlock>    
+        <TextBlock Text="{Binding}" Width="300" Height="300"></TextBlock>    
     </Grid>
 </UserControl>
